# gcs-uploader

./: .env.org  .gitignore  README.md  pyproject.toml
src/libs/: data_repository.py  gcs_setting.py
src/uploader/: app.py
